--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 </head>
 <body>
   
-  <div class="container">
+  <main class="container">
 
     <section class="hero">
 
-      <h3 class="hero__title">Join our community</h3>
-      <h5 class="hero__title__small">30-day, hassle-free money back guarantee</h5>
+      <h1 class="hero__title">Join our community</h1>
+      <h2 class="hero__title-small">30-day, hassle-free money back guarantee</h2>
       <p class="hero__body">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills. </p>
 
     </section>
 
     <section class="subscribe">
 
-      <h4 class="subscribe__title">Monthly Subscription</h4>
+      <h2 class="subscribe__title">Monthly Subscription</h2>
       <p class="subscribe-fee">&dollar;29<span class="per-month">per month</span></p>
       <p class="subscribe__body">Full access for less than &dollar;1 a day</p>
-      <a class="subscribe__button" href="#" target="_blank">Sign Up</a>
+      <a class="subscribe__button" href="#" aria-label="Link to sign up page">Sign Up</a>
 
     </section>
 
     <section class="why-us">
 
-      <h4 class="why-us__title">Why Us</h4>
+      <h2 class="why-us__title">Why Us</h2>
       <ul class="why-us__list">
         <li>Tutorials by industry experts</li>
         <li>Peer &amp; expert code review</li>
@@ -46,7 +46,7 @@
 
     </section>
 
-  </div>
+  </main>
 
 </body>
 </html>
