--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2 class="subscribe__title">Monthly Subscription</h2>
       <p class="subscribe-fee">&dollar;29<span class="per-month">per month</span></p>
       <p class="subscribe__body">Full access for less than &dollar;1 a day</p>
-      <a class="subscribe__button" href="#" aria-label="Link to sign up page">Sign Up</a>
+      <a class="subscribe__button" href="#">Sign Up</a>
 
     </section>
 
